# anchor-nft-staking

./: Anchor.toml  package-lock.json
programs/anchor-nft-staking/: Cargo.toml
programs/anchor-nft-staking/src/: lib.rs
tests/: anchor-nft-staking.ts
tests/utils/: setupNft.ts
